<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/common_toolbar" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="66dp"
        app:hintTextAppearance="@style/TextAppearance.AppCompat">

        <EditText
            android:id="@+id/editText_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/layout_str_hint_phone"
            android:inputType="phone" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:hintTextAppearance="@style/TextAppearance.AppCompat">

        <EditText
            android:id="@+id/editText_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/layout_str_hint_password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editText_verify_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="4"
            android:gravity="center"
            android:hint="@string/layout_str_hint_input_code"
            android:inputType="number"
            android:maxLength="6" />

        <Button
            android:id="@+id/button_send_verify_code"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:background="?attr/colorPrimary"
            android:text="@string/msg_get_verify_code"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <com.dd.processbutton.iml.ActionProcessButton
        android:id="@+id/buttonSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginBottom="16dp"
        android:text="@string/layout_str_hint_sign_up"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:pb_colorComplete="@color/green_complete"
        app:pb_colorError="@color/red_error"
        app:pb_colorNormal="?attr/colorPrimary"
        app:pb_colorPressed="?attr/colorPrimaryDark"
        app:pb_colorProgress="@color/purple_progress"
        app:pb_textComplete="@string/layout_str_msg_login_successs"
        app:pb_textError="注册错误"
        app:pb_textProgress="正在注册..." />


</LinearLayout>